# palette_control

./: Cargo.toml  LICENSE  README.md
controller/: Cargo.toml  index.html
controller/src/: app.rs  color.rs  event_bus.rs  lib.rs  main.rs  websocket.rs
server/: Cargo.toml
server/src/: client.rs  color.rs  control.rs  main.rs  osc.rs  palette.rs  subscriber.rs
shared/: .gitignore  Cargo.toml
shared/src/: lib.rs
src/: color.rs  main.rs  state.rs  subscriber.rs
