[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2.45"
wasm-logger = "0.2"
log = "0.4.6"
reqwasm = "0.4"
web-sys = "0.3.55"
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"
serde_json = "1.0.73"
serde = {version = "1.0", features=["derive"]}
shared = { path = "../shared" }
yew-agent = "0.1.0"