[package]
name = "palette_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
number = { git = "https://github.com/generalelectrix/number", branch = "main" }
rosc = "~0.8"
log = "^0.4"
simple-error = "^0.2"
derive_more = "^0.99"
websocket = "0.26"
serde = { version = "^1", features = ["derive"]}
serde_json = "1.0"
shared = { path = "../shared" }
simple_logger = "2.2.0"